added functions for dots

--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
         <div id="top-row">
           <img class="arrow arrow-left" id="arrow-left" src="./img/arrow-left.png" alt="" />
           <div id="slides-container">
-            <img class="slide active" src="./img/photos/photo1.jpg"/>
-            <img class="slide" src="./img/photos/photo2.jpg" />
-            <img class="slide" src="./img/photos/photo3.jpg" />
+            <img class="slide active" id="slide1" src="./img/photos/photo1.jpg"/>
+            <img class="slide" id="slide2" src="./img/photos/photo2.jpg" />
+            <img class="slide" id="slide3" src="./img/photos/photo3.jpg" />
           </div>
 
           <img class="arrow arrow-right" id="arrow-right" src="./img/arrow-right.png" alt="" />
         </div>
         <div id="bottom-row">
           <div id="dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+            <div class="dot" id="dot1"></div>
+            <div class="dot" id="dot2"></div>
+            <div class="dot" id="dot3"></div>
           </div>
         </div>
       </div> 
     <main>
     <script src="app.js"></script>
+    <!-- <script src="example.js"></script> -->
   </body>
 </html>
+
+
