slider is active

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
       </div> 
     <main>
-    <!-- <script src="app.js"></script> -->
-    <script src="example.js"></script>
+    <script src="app.js"></script>
+    <!-- <script src="example.js"></script> -->
   </body>
 </html>
 
